--- a/app/views/stores/_tiles.html.erb
+++ b/app/views/stores/_tiles.html.erb
@@ -5,7 +5,7 @@
     </div>
     <ul class="grid grid--gutter-half grid--mrg-half">
       <% results.each do |result| %>
-        <li class="grid__item one-half non-palm-one-third">
+        <li class="grid__item one-half palm-lrg-one-third">
           <%= render partial: "/shared/tiles/#{ kind }",
                 layout: '/layouts/tile',
                 locals: {
