--- a/app/assets/stylesheets/partials/abstractions/_definition-list.scss
+++ b/app/assets/stylesheets/partials/abstractions/_definition-list.scss
@@ -13,7 +13,7 @@
 	clear: left;
 	margin-right: to-em($spacing-quarter);
 
-	@include respond-min($ipad-portrait) {
+	@include respond-min($lap-sml-middle) {
 		margin-right: 0;
 	}
 
