--- a/app/assets/stylesheets/partials/modules/_hero.scss
+++ b/app/assets/stylesheets/partials/modules/_hero.scss
@@ -37,7 +37,7 @@
     @include font-size($font-size-deca, 1);
     @include to-rem(margin-bottom, $spacing-sixth);
 
-    @include respond-min($iphone-landscape) {
+    @include respond-min($palm-lrg) {
       @include font-size(40, 1);
     }
 
@@ -54,7 +54,7 @@
     text-transform: uppercase;
     @include font-size($font-size-deca);
 
-    @include respond-min($iphone-landscape) {
+    @include respond-min($palm-lrg) {
       @include font-size(40);
     }
 
