--- a/app/assets/stylesheets/partials/modules/_storefront.scss
+++ b/app/assets/stylesheets/partials/modules/_storefront.scss
@@ -29,7 +29,7 @@
         @include to-rem(height, 140);
 
 
-        @include respond-min($iphone-landscape) {
+        @include respond-min($palm-lrg) {
           @include to-rem(height, 180);
         }
 
@@ -37,7 +37,7 @@
           @include to-rem(height, 288);
         }
 
-        @include respond-min($ipad-landscape) {
+        @include respond-min($lap-lrg-middle) {
           @include to-rem(height, 210);
         }
 
@@ -60,7 +60,7 @@
           /* Super long store name */
           &.is-long-store-name {@include font-size($font-size-lrger, 1.3);}
 
-          @include respond-min($iphone-landscape) {
+          @include respond-min($palm-lrg) {
             @include font-size(26, 1.3);
 
             /* Super long store name */
@@ -75,12 +75,12 @@
             &.is-long-store-name {@include font-size($font-size-hecto, 1.3);}
           }
 
-          @include respond-min($ipad-landscape) {
+          @include respond-min($lap-lrg-middle) {
             /* Super long store name */
             &.is-long-store-name {@include font-size(28, 1.3);}
           }
 
-          @include respond-range($ipad-landscape, $desk) {
+          @include respond-range($lap-lrg-middle, $desk) {
             @include font-size(32, 1.3);
           }
         }
@@ -107,7 +107,7 @@
             @include to-rem(margin-top, -$spacing-half);
             @include font-size($font-size-milli, 1.5);
 
-            @include respond-min($iphone-landscape) {
+            @include respond-min($palm-lrg) {
               margin-top: 0;
               @include font-size($font-size-sml, 1.5);
             }
@@ -117,11 +117,11 @@
               @include font-size($font-size, 1.5);
             }
 
-            @include respond-min($ipad-landscape) {
+            @include respond-min($lap-lrg-middle) {
               width: 80%;
             }
 
-            @include respond-range($ipad-landscape, 1100) {
+            @include respond-range($lap-lrg-middle, 1100) {
               @include font-size($font-size-sml, 1.5);
             }
           }
@@ -135,7 +135,7 @@
     border-width: 1px 0;
 
     /* Allow store link to be positioned over to the far right at this breakpoint */
-    @include respond-min($ipad-portrait) {
+    @include respond-min($lap-sml-middle) {
       position: relative;
     }
   }
@@ -153,7 +153,7 @@
         @include to-rem(margin-right, 130);
       }
 
-      @include respond-min($ipad-landscape) {
+      @include respond-min($lap-lrg-middle) {
         margin-right: 0;
         @include to-rem(padding-top, $spacing-half);
         /* Need to offset the bottom margin on the child `dd`s */
@@ -185,7 +185,7 @@
     }
 
     /* Store phone no and location - hide at this breakpoint */
-    @include respond-min($ipad-landscape) {
+    @include respond-min($lap-lrg-middle) {
       .storefront__details__phone-map {display: none;}
     }
 
@@ -195,7 +195,7 @@
         @include to-rem(width, 126);
 
         /* Add right border and decrease width at this breakpoint */
-        @include respond-min($ipad-portrait) {
+        @include respond-min($lap-sml-middle) {
           @include to-rem(width, 120);
         }
 
@@ -233,7 +233,7 @@
 
       /* Need to shorten the day at this breakpoint range due to lack of real estate */
       /* Note: have to use `!important` keyword here to override the 'Hide' helper class */
-      @include respond-range($ipad-landscape, $desk-lrg) {
+      @include respond-range($lap-lrg-middle, $desk-lrg) {
         .table-striped .hide-fully--palm-inline {display: none !important;}
       }
 
@@ -250,7 +250,7 @@
         display: none;
 
         /* Show 3rd tile at this breakpoint */
-        @include respond-min($non-palm) {
+        @include respond-min($palm-lrg) {
           display: block;
         }
       }
@@ -259,7 +259,7 @@
       .grid__item:last-child {@include to-rem(margin-bottom, $grid-gutter-half);}
 
       /* Mods for 'Deal' tile at this breakpoint range */
-      @include respond-range($ipad-landscape, 1300) {
+      @include respond-range($lap-lrg-middle, 1300) {
         .tile--deal .tile__meta {
           @include to-rem(padding, 55 15);
 
