--- a/app/assets/stylesheets/partials/modules/widgets/_dialog.scss
+++ b/app/assets/stylesheets/partials/modules/widgets/_dialog.scss
@@ -51,14 +51,14 @@
 	text-align: center;
 
 	/* Set fixed width and align it to the center of the viewport */
-	@include respond-min($iphone-landscape) {
+	@include respond-min($palm-lrg) {
 		left: 50%;
 		right: auto;
 		@include to-rem(margin-left, -220);
 		@include to-rem(width, 440);
 	}
 
-	@include respond-min($ipad-portrait) {
+	@include respond-min($lap-sml-middle) {
 		@include to-rem(top, $spacing-dbl);
 	}
 
@@ -73,11 +73,11 @@
 			width: 78%;
 		}
 
-		@include respond-range(479, $ipad-portrait - 1) {
+		@include respond-range(479, $lap-sml-middle - 1) {
 			width: 70%;
 		}
 
-		@include respond-min($ipad-portrait) {
+		@include respond-min($lap-sml-middle) {
 			@include font-size(28, 1.3);
 		}
 	}
@@ -93,7 +93,7 @@
 			width: 70%;
 		}
 
-		@include respond-min($iphone-landscape) {
+		@include respond-min($palm-lrg) {
 			@include to-rem(width, $drop-down-width);
 		}
 	}
@@ -104,7 +104,7 @@
 	.btn--faux-link {
 		@include font-size($font-size-sml, 1);
 
-		@include respond-min($ipad-portrait) {
+		@include respond-min($lap-sml-middle) {
 			@include font-size($font-size, 1);
 		}
 	}
@@ -115,7 +115,7 @@
 		width: 82px;
 		height: 26px;
 
-		@include respond-min($ipad-portrait) {
+		@include respond-min($lap-sml-middle) {
 			width: 114px;
 			height: 36px;
 		}
