--- a/app/assets/stylesheets/partials/modules/_timeline.scss
+++ b/app/assets/stylesheets/partials/modules/_timeline.scss
@@ -96,6 +96,6 @@
 
     span {
       display: block;
-      @include font-size(30, 0.8);
+      @include font-size($font-size-deca, 0.8);
     }
   }
