--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -47,6 +47,8 @@ $font-size-kilo: 48 !default;
 
 $font-size-hecto: 36 !default;
 
+$font-size-deca: 30 !default;
+
 /* Families */
 $font-family-lato: "Lato", sans-serif !default;
 
