--- a/app/assets/stylesheets/styleguide/partials/base/_headings.scss
+++ b/app/assets/stylesheets/styleguide/partials/base/_headings.scss
@@ -8,7 +8,7 @@
 
 .sg-h1 {
   font-weight: 300;
-  @include font-size(30);
+  @include font-size($font-size-deca);
   font-family: $font-family-lato;
 
   /* Home page version */
