--- a/app/views/centre_info/show.html.erb
+++ b/app/views/centre_info/show.html.erb
@@ -12,7 +12,7 @@
         --><%= content_tag :li, link_to('Follow Us', anchor: 'follow-us') if social_media.present? %>
       </ul>
     </div>
-    <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
+    <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--deca icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
   </div>
 </div>
 <%# //Nav contextual %>
