--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -44,7 +44,7 @@
           </li><% end %><% end %>
         </ul>
       </div>
-      <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
+      <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--deca icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
     </div>
   </div>
   <%#// List of anchors to each search result type %>
