--- a/app/views/styleguide/modules/_nav_contextual.html.erb
+++ b/app/views/styleguide/modules/_nav_contextual.html.erb
@@ -11,7 +11,7 @@
         --><li><a href="#">Nec at quodsi</a></li>
       </ul>
     </div>
-    <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
+    <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--deca icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
   </div>
 </div>
 <% end %>
