--- a/app/assets/stylesheets/partials/modules/_deal-main.scss
+++ b/app/assets/stylesheets/partials/modules/_deal-main.scss
@@ -15,7 +15,7 @@
 
 	/* Title */
 	.deal-main__hdr {
-		@include font-size(36);
+		@include font-size($font-size-hecto);
 		@include to-rem(margin-bottom, $spacing-third);
 	}
 
