--- a/app/assets/stylesheets/partials/modules/_detail-view.scss
+++ b/app/assets/stylesheets/partials/modules/_detail-view.scss
@@ -96,7 +96,7 @@
     color: $color-txt-dark;
 
     @include respond-min($non-palm) {
-      @include font-size(36, 1.2);
+      @include font-size($font-size-hecto, 1.2);
     }
   }
 
