--- a/app/assets/stylesheets/partials/modules/_icon.scss
+++ b/app/assets/stylesheets/partials/modules/_icon.scss
@@ -258,8 +258,6 @@
 /* Modifier: extra large */
 .icon--giga:before {@include font-size($font-size-giga, 1);}
 
-.icon--mega:before {@include font-size(30, 1);}
-
 .icon--kilo:before {@include font-size($font-size-kilo, 1);}
 
 .icon--hecto:before {@include font-size($font-size-hecto, 1);}
@@ -267,6 +265,8 @@
 @include respond-min($non-palm) {
   .icon--hecto-non-palm:before {@include font-size($font-size-hecto, 1);}
 }
+
+.icon--deca:before {@include font-size($font-size-deca, 1);}
 
 /* Modifier: restore base font size */
 .icon--base-size:before {font-size: inherit;}
