--- a/app/assets/stylesheets/partials/modules/_product-curation.scss
+++ b/app/assets/stylesheets/partials/modules/_product-curation.scss
@@ -9,9 +9,9 @@
 .product-curation {
 
   /* Headings */
-  h1 {@include font-size(36);}
+  h1 {@include font-size($font-size-hecto);}
 
-  h2 {@include font-size(24, 1.3);}
+  h2 {@include font-size($font-size-xlrg, 1.3);}
 }
 
   /* Description (toggled at palm) */
