--- a/app/assets/stylesheets/partials/modules/_promo-tile.scss
+++ b/app/assets/stylesheets/partials/modules/_promo-tile.scss
@@ -37,7 +37,7 @@
 
     @include respond-min($non-palm) {
       @include to-rem(padding, $spacing-half);
-      @include font-size(36, 1);
+      @include font-size($font-size-hecto, 1);
       @include to-rem(margin-top, -28);
     }
   }
