--- a/app/assets/stylesheets/partials/modules/_storefront.scss
+++ b/app/assets/stylesheets/partials/modules/_storefront.scss
@@ -72,7 +72,7 @@
             @include to-rem(margin-top, 0);
 
             /* Super long store name */
-            &.is-long-store-name {@include font-size(36, 1.3);}
+            &.is-long-store-name {@include font-size($font-size-hecto, 1.3);}
           }
 
           @include respond-min($ipad-landscape) {
