--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -22,7 +22,7 @@
             <%#</li>%>
           </ul>
         </div>
-        <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
+        <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--deca icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
       </div>
     </div>
     <%# //Nav contextual %>
