--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -33,7 +33,7 @@
           <% days(@movie_sessions.last['start_time'], @centre.code, params['date']).each do |day| %><li><%= day %></li><% end %>
         </ul>
       </div>
-      <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--mega icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
+      <span class="nav-contextual__clip__overlay icon icon--arrow-right icon--deca icon--flush-top js-nav-contextual-clip-overlay" aria-hidden="true"></span>
     </div>
   </div>
   <%# //Nav contextual %>
