update breakpoints after rebase

--- a/app/assets/stylesheets/partials/modules/_pin-board.scss
+++ b/app/assets/stylesheets/partials/modules/_pin-board.scss
@@ -61,11 +61,11 @@
     @include curation-hero-tile-height($tile-fixed-height-2);
   }
 
-  @include respond-min($iphone-landscape) {
+  @include respond-min($palm-lrg) {
     @include curation-hero-tile-height($tile-fixed-height-3);
   }
 
-  @include respond-min($ipad-portrait) {
+  @include respond-min($lap-sml-middle) {
     @include curation-hero-tile-height($tile-fixed-height-4);
   }
 
