--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -97,10 +97,12 @@ $spacing-dbl: $line-height * 2 !default;
 					-	Desk large:	larger desktop computer monitors, TV's, and who knows what else?
 			-	Breakpoints:
 				-	Palm: 	0 - 640px
+					- Palm large:	481px+
 				-	Lap:	641px - 1199px
 					-	Lap small:	641px - 900px
-						- Lap small middle - 768px
+						- Lap small middle: 768px+
 					-	Lap large:	901px - 1199px
+						-	Lap large middle: 1024px+
 				-	Desk:	1200px +
 					-	Desk small:	1200px - 1365px
 					-	Desk large:	1366px +
