use straight number for palm-lrg

--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -142,7 +142,7 @@ $desk-sml-end: $desk-lrg-start - 1 !default;
 /* Palm */
 $palm: $palm-end !default;
 
-$palm-lrg: $palm-lrg-start !default;
+$palm-lrg: 480 !default;
 
 /* Non-palm */
 $non-palm: $lap-start !default;
