comment out unused grid widths

--- a/app/assets/stylesheets/partials/layout/grid/_widths.scss
+++ b/app/assets/stylesheets/partials/layout/grid/_widths.scss
@@ -40,13 +40,13 @@
   .#{$namespace}four-sixths {width: $two-thirds;}
   .#{$namespace}five-sixths {width: $five-sixths;}
 
-    /* Seventh */
-  .#{$namespace}one-seventh {width: $one-seventh;}
+  /* Seventh */
+/*.#{$namespace}one-seventh {width: $one-seventh;}
   .#{$namespace}two-sevenths {width: $two-sevenths;}
   .#{$namespace}three-sevenths {width: $three-sevenths;}
   .#{$namespace}four-sevenths {width: $four-sevenths;}
   .#{$namespace}five-sevenths {width: $five-sevenths;}
-  .#{$namespace}six-sevenths {width: $six-sevenths;}
+  .#{$namespace}six-sevenths {width: $six-sevenths;} */
 
   /* Eighths */
   .#{$namespace}one-eighth {width: $one-eighth;}
