Update creative - WSF-6380

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -17,7 +17,7 @@
       <div class="national__header__intro">
         <h1>
           <span><%= @centres.length %> centres. Over 10,300 stores. Over <%= number_with_delimiter(@products_count, separator: ',') %> products</span>
-          HAPPY EASTER
+          AUTUMN 2014
         </h1>
       </div>
       <%# //Hero heading wrap %>
