--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -24,11 +24,19 @@
   <%# //Product brand %>
 
   <%# Product price %>
-  <p class="price-strip">
-    <strong>
-      <span class="hide-visually">Price: </span>
-      <%= number_to_currency result.sale_price %>
-    </strong>
+  <p class="price-strip <%= 'is-long-price' if number_to_currency(result.price.to_s).length > 9 %>">
+    <%- if result.is_discounted -%>
+      <span class="price-strip__normal hide-visually">Normal price: </span>
+      <s class="price-strip__normal"><%= number_to_currency result.price %></s>
+      <span class="hide-visually">Sale price: </span>
+      <strong class="price-strip__sale"><%= number_to_currency result.sale_price %></strong>
+      <strong class="price-strip__savings islet"><%= number_to_percentage result.percent_discount, precision: 0 %> Off</strong>
+    <%- else -%>
+      <strong>
+        <span class="hide-visually">Price: </span>
+        <%= number_to_currency result.sale_price %>
+      </strong>
+    <%- end -%>
   </p>
   <%# //Product price %>
 
