--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -28,7 +28,7 @@
           <s class="price-strip__normal"><%= Money.new(@product.price).format %></s>
           <span class="hide-visually">Sale price: </span>
           <strong class="price-strip__sale"><%= Money.new(@product.sale_price).format %></strong>
-          <strong class="price-strip__savings islet"><%= number_to_percentage(percentage_off, :precision => 0) %> Off
+          <strong class="price-strip__savings islet"><%= number_to_percentage @product.percent_discount, precision: 0 %> Off
           </strong>
         <%- else -%>
           <strong>
