--- a/app/assets/stylesheets/partials/modules/_tile.scss
+++ b/app/assets/stylesheets/partials/modules/_tile.scss
@@ -91,6 +91,15 @@
       @include respond-min($non-palm) {
         @include to-rem(padding, 84 25);
       }
+
+      /* Storefront pin board */
+      @include respond-range($lap-lrg-middle, 1300) {
+        .storefront__featured--tiles & {
+          @include to-rem(padding, 55 15);
+
+          .tile__meta__desc {@include font-size($font-size-sml, 1.5);}
+        }
+      }
     }
 
     /* Modifier: no icon */
@@ -121,13 +130,36 @@
           }
         }
 
-        /* Curation pin board */
-        @include respond-range($palm-lrg - 1, $palm) {
-          .pin-board-curation & .price-strip__normal {display: inline;}
+        /* Long normal price - when it exceeds 5 digits */
+        .is-long-price .price-strip__normal {
+          display: none;
+
+          @include respond-range(720, $lap-end) {
+            display: inline;
+          }
         }
 
-        /* Hide normal price due to lack of real estate when it exceeds 5 digits */
-        .is-long-price .price-strip__normal {display: none;}
+        /* Curation pin board */
+        .pin-board-curation & {
+          @include respond-range($palm-lrg - 1, $palm) {
+            .price-strip__normal {display: inline;}
+          }
+
+          @include respond-min($palm-lrg) {
+            .is-long-price .price-strip__normal {display: inline;}
+          }
+        }
+
+        /* Storefront pin board */
+        .storefront__featured--tiles & {
+          @include respond-range($lap-lrg-middle, $desk) {
+            .price-strip__normal {display: none;}
+          }
+
+          @include respond-min(1400) {
+            .is-long-price .price-strip__normal {display: inline;}
+          }
+        }
 
         /* Savings % tag % */
         .price-strip__savings {@include to-rem(padding, $spacing-quarter);}
